--- a/siteparavenda/estilo/style.css
+++ b/siteparavenda/estilo/style.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'vanilla';
-    src: url('../font/vanilla_whale.otf') format("opentype"),
+    src: url('../font/') format("opentype"),
 }
 
 
@@ -47,7 +47,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    min-height: 80px;
+    min-height: 10%;
 }
 
 
@@ -75,7 +75,7 @@ header ul{
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 25px;
+    column-gap: 25px;
     padding: 20px;
     flex-wrap: wrap;
 
@@ -86,6 +86,20 @@ header a{
     color: white;
     font: normal bold 1.1em arial;
     font-variant: small-caps;
+}
+
+header li:hover{
+    transform: translate(-2px ,-2px);
+    transition: transform 0.2s;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.781);
+}
+
+/*Menu Redes Sociais*/
+
+header ul#redes_sociais img{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
 }
 
 /*Fundo*/
@@ -143,8 +157,14 @@ div#conteudo1 a{
     color: rgb(19, 19, 19);
 }
 
+div#conteudo1 a:hover{
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
+}
+
 div#conteudo1 li:hover{
 
-    transform: translateY(-2px);
+    transform: translateY(-3px);
+    transition: transform 0.2s;
+    
 }
 
